[gd_scene load_steps=8 format=3 uid="uid://bjmplnxppqqgy"]

[ext_resource type="Script" path="res://Cards/CardBase.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b2ygj1gs7rp75" path="res://Assets/Cards/Card Borders etc/cardborder.png" id="2"]
[ext_resource type="FontFile" uid="uid://chcft5mar77kw" path="res://Assets/font/Comfortaa-Bold.ttf" id="3"]
[ext_resource type="Texture2D" uid="uid://b23dg8rbk8xfm" path="res://Assets/Cards/Card Borders etc/background shade.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bx21xml7u3m2b" path="res://Assets/Cards/Card Borders etc/Back_Texture.png" id="5"]
[ext_resource type="Texture2D" uid="uid://nji8drvlbn26" path="res://Assets/Cards/Card Borders etc/Gold_Border.png" id="6_pjig2"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="CardBase" type="MarginContainer"]
offset_right = 250.0
offset_bottom = 350.0
script = ExtResource("1")

[node name="Card" type="Sprite2D" parent="."]
centered = false

[node name="Border" type="Sprite2D" parent="."]
texture = ExtResource("2")
centered = false

[node name="Bars" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TopGap" type="MarginContainer" parent="Bars"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="Bars"]
layout_mode = 2

[node name="LeftGap" type="MarginContainer" parent="Bars/TopBar"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="Name" type="MarginContainer" parent="Bars/TopBar"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/TopBar/Name"]
layout_mode = 2
texture = ExtResource("4")

[node name="CenterContainer" type="CenterContainer" parent="Bars/TopBar/Name"]
layout_mode = 2

[node name="Name" type="Label" parent="Bars/TopBar/Name/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("1")
text = "Footman"

[node name="MidGap" type="MarginContainer" parent="Bars/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Cost" type="MarginContainer" parent="Bars/TopBar"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/TopBar/Cost"]
layout_mode = 2
texture = ExtResource("4")

[node name="CenterContainer" type="CenterContainer" parent="Bars/TopBar/Cost"]
layout_mode = 2

[node name="Cost" type="Label" parent="Bars/TopBar/Cost/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("1")
text = "1"

[node name="RightGap" type="MarginContainer" parent="Bars/TopBar"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="MidGap" type="MarginContainer" parent="Bars"]
layout_mode = 2
size_flags_vertical = 3

[node name="SpecialText" type="HBoxContainer" parent="Bars"]
layout_mode = 2

[node name="LeftGap" type="MarginContainer" parent="Bars/SpecialText"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="Text" type="MarginContainer" parent="Bars/SpecialText"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/SpecialText/Text"]
layout_mode = 2
texture = ExtResource("4")

[node name="CenterContainer" type="CenterContainer" parent="Bars/SpecialText/Text"]
layout_mode = 2

[node name="Type" type="Label" parent="Bars/SpecialText/Text/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("1")
text = "Melee"

[node name="MidGap" type="MarginContainer" parent="Bars/SpecialText"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LowerGap" type="MarginContainer" parent="Bars"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="BottomBar" type="HBoxContainer" parent="Bars"]
layout_mode = 2

[node name="LeftGap" type="MarginContainer" parent="Bars/BottomBar"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="Attack" type="MarginContainer" parent="Bars/BottomBar"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/BottomBar/Attack"]
layout_mode = 2
texture = ExtResource("4")

[node name="CenterContainer" type="CenterContainer" parent="Bars/BottomBar/Attack"]
layout_mode = 2

[node name="AandR" type="Label" parent="Bars/BottomBar/Attack/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("1")
text = "1/1"

[node name="MidGap" type="MarginContainer" parent="Bars/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Health" type="MarginContainer" parent="Bars/BottomBar"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/BottomBar/Health"]
layout_mode = 2
texture = ExtResource("4")

[node name="CenterContainer" type="CenterContainer" parent="Bars/BottomBar/Health"]
layout_mode = 2

[node name="Health" type="Label" parent="Bars/BottomBar/Health/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("1")
text = "2"

[node name="RightGap" type="MarginContainer" parent="Bars/BottomBar"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="BottomGap" type="MarginContainer" parent="Bars"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Focus" type="TextureButton" parent="."]
layout_mode = 2
texture_hover = ExtResource("6_pjig2")
stretch_mode = 0

[node name="CardBack" type="Sprite2D" parent="."]
texture = ExtResource("5")
centered = false

[connection signal="mouse_entered" from="Focus" to="." method="_on_focus_mouse_entered"]
[connection signal="mouse_exited" from="Focus" to="." method="_on_focus_mouse_exited"]
