[gd_scene load_steps=5 format=3 uid="uid://c0rbuj48n825y"]

[ext_resource type="Script" path="res://Cards/CardBase.gd" id="1_cmb06"]
[ext_resource type="Texture2D" uid="uid://c7edvshtm0tbf" path="res://Assets/Cards/Card Borders etc/cardborder.png" id="2_1ntd7"]
[ext_resource type="Texture2D" uid="uid://84h33wh4qdt4" path="res://Assets/Cards/Card Borders etc/background shade.png" id="3_2d0s4"]
[ext_resource type="FontFile" uid="uid://8ktr3q6biy6j" path="res://Assets/font/Comfortaa-Bold.ttf" id="4_c84bm"]

[node name="CardBase" type="MarginContainer"]
offset_right = 250.0
offset_bottom = 350.0
pivot_offset = Vector2(125, 175)
script = ExtResource("1_cmb06")

[node name="Card" type="Sprite2D" parent="."]
centered = false

[node name="Border" type="Sprite2D" parent="."]
texture = ExtResource("2_1ntd7")
centered = false

[node name="Bars" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TopGap" type="MarginContainer" parent="Bars"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="Bars"]
layout_mode = 2

[node name="LeftGap" type="MarginContainer" parent="Bars/TopBar"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="Name" type="MarginContainer" parent="Bars/TopBar"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/TopBar/Name"]
layout_mode = 2
texture = ExtResource("3_2d0s4")

[node name="CenterContainer" type="CenterContainer" parent="Bars/TopBar/Name"]
layout_mode = 2

[node name="Name" type="Label" parent="Bars/TopBar/Name/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_c84bm")
theme_override_font_sizes/font_size = 14
text = "Footman"

[node name="Mid Gap" type="MarginContainer" parent="Bars/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Cost" type="MarginContainer" parent="Bars/TopBar"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/TopBar/Cost"]
layout_mode = 2
texture = ExtResource("3_2d0s4")

[node name="CenterContainer" type="CenterContainer" parent="Bars/TopBar/Cost"]
layout_mode = 2

[node name="Cost" type="Label" parent="Bars/TopBar/Cost/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_c84bm")
theme_override_font_sizes/font_size = 14
text = "1"

[node name="RightGap" type="MarginContainer" parent="Bars/TopBar"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="MidGap" type="MarginContainer" parent="Bars"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Bars"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="SpesialText" type="HBoxContainer" parent="Bars"]
layout_mode = 2

[node name="LeftGap" type="MarginContainer" parent="Bars/SpesialText"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="Name" type="MarginContainer" parent="Bars/SpesialText"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/SpesialText/Name"]
layout_mode = 2
texture = ExtResource("3_2d0s4")

[node name="CenterContainer" type="CenterContainer" parent="Bars/SpesialText/Name"]
layout_mode = 2

[node name="Type" type="Label" parent="Bars/SpesialText/Name/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_c84bm")
theme_override_font_sizes/font_size = 14
text = "Mele"

[node name="Mid Gap" type="MarginContainer" parent="Bars/SpesialText"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LowerGap" type="MarginContainer" parent="Bars"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="BottomBar" type="HBoxContainer" parent="Bars"]
layout_mode = 2

[node name="LeftGap" type="MarginContainer" parent="Bars/BottomBar"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="Attack" type="MarginContainer" parent="Bars/BottomBar"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/BottomBar/Attack"]
layout_mode = 2
texture = ExtResource("3_2d0s4")

[node name="CenterContainer" type="CenterContainer" parent="Bars/BottomBar/Attack"]
layout_mode = 2

[node name="Attack" type="Label" parent="Bars/BottomBar/Attack/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_c84bm")
theme_override_font_sizes/font_size = 14
text = "1/1"

[node name="Mid Gap" type="MarginContainer" parent="Bars/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Health" type="MarginContainer" parent="Bars/BottomBar"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/BottomBar/Health"]
layout_mode = 2
texture = ExtResource("3_2d0s4")

[node name="CenterContainer" type="CenterContainer" parent="Bars/BottomBar/Health"]
layout_mode = 2

[node name="Health" type="Label" parent="Bars/BottomBar/Health/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_c84bm")
theme_override_font_sizes/font_size = 14
text = "3"

[node name="RightGap" type="MarginContainer" parent="Bars/BottomBar"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="BottomGap" type="MarginContainer" parent="Bars"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
